@@ -3,6 +3,7 @@ Version 0.X (XXXX-XX-XX)
 
    New: Annotations not visible in the tree due to their parents being collapsed are now hidden from rendering
         in the viewer.
+   New: Selecting an annotation in the tree will select the corresponding range in the viewer.
 
 Version 0.2 (XXXX-XX-XX)
 
